--- a/lab-3/ll-3-case-study.Rmd
+++ b/lab-3/ll-3-case-study.Rmd
@@ -19,6 +19,67 @@ bibliography: lit/references.bib
 knitr::opts_chunk$set(echo = TRUE, eval = TRUE)
 ```
 
+
+1.  We use a very different data set, on from *online science classes*
+    that involves a variety of variables types
+2.  We focus on *feature engineering*, a key step in which we prepare
+    variables for inclusion in our machine learning models
+3.  We use resampling to evaluate the effectiveness of the feature
+    engineering steps
+
+Feature engineering is a rich topic in machine learning research,
+including in the learning analytics and educational data mining
+communities.
+
+Consider research on online learning and the work of Li et al. (2020)
+and Rodriguez et al. (2021). In these two studies, digital *log-trace
+data*, data generated through users' interactions with digital
+technologies, was used to study elements of the theoretical frame of
+*self-regulated learning* and how it related to students' achievement.
+Notably, the authors took several steps to prepare the data so that it
+could be validly interpreted as measures of students' self-regulated
+learning. In short, we need to process the data from contexts such as
+online classes to use them in analyses. Citations and links to these
+papers follow.
+
+> Li, Q., Baker, R., & Warschauer, M. (2020). Using clickstream data to
+> measure, understand, and support self-regulated learning in online
+> courses. The Internet and Higher Education, 45, 100727.
+> <https://github.com/laser-institute/essential-readings/blob/main/machine-learning/ml-lab-2/li-et-al-2020-ihe.pdf>
+>
+> Rodriguez, F., Lee, H. R., Rutherford, T., Fischer, C., Potma, E., &
+> Warschauer, M. (2021, April). Using clickstream data mining techniques
+> to understand and support first-generation college students in an
+> online chemistry course. In LAK21: 11th International Learning
+> Analytics and Knowledge Conference (pp. 313-322).
+> <https://github.com/laser-institute/essential-readings/blob/main/machine-learning/ml-lab-2/rodriguez-et-al-2021-lak.pdf>
+
+The same is true here in the context of machine learning. In a different
+context, the work of Gobert et al. (2013) is a great example of using
+data from educational simulations. Salmeron-Majadas provides an example
+of feature engineering using mouse-click data. Last, we note that there
+are methods that intended to automated the process of feature
+engineering (Bosch et al., 2021), though such processes are not
+necessarily interpretable and they usually require some degree of
+tailoring to your particular context.
+
+> Gobert, J. D., Sao Pedro, M., Raziuddin, J., & Baker, R. S. (2013).
+> From log files to assessment metrics: Measuring students' science
+> inquiry skills using educational data mining. Journal of the Learning
+> Sciences, 22(4), 521-563.
+> <https://github.com/laser-institute/essential-readings/blob/main/machine-learning/ml-lab-3/gobert-et-al-2013-jls.pdf>
+
+> Salmeron-Majadas, S., Baker, R. S., Santos, O. C., & Boticario, J. G.
+> (2018). A machine learning approach to leverage individual keyboard
+> and mouse interaction behavior from multiple users in real-world
+> learning scenarios. IEEE Access, 6, 39154-39179.
+> <https://ieeexplore.ieee.org/iel7/6287639/8274985/08416736.pdf>
+
+> Bosch, N. (2021). AutoML Feature Engineering for Student Modeling
+> Yields High Accuracy, but Limited Interpretability. Journal of
+> Educational Data Mining, 13(2), 55-79.
+> <https://github.com/laser-institute/essential-readings/blob/main/machine-learning/ml-lab-3/bosch-et-al-2021-jedm.pdf>
+
 Even after feature engineering, machine learning approaches can often
 (but not always) be improved by choosing a more sophisticated model
 type. Note how we used a regression model in the first two case studies;
@@ -128,7 +189,83 @@ data_train <- training(train_test_split)
 <replace this line with your kfcv code!>
 ```
 
+
+Here's a key difference! Pay careful attention to this next line of
+code, which sets the groundwork for *k*-folds cross-validation. Note
+that in the function below (run `?vfold_cv` to see more), the letter *v*
+is used instead of *k*, though they share a meaning, as the
+documentation notes).
+
+```{r}
+kfcv <- vfold_cv(data_train) # this differentiates this from what we did before
+# before, we simple used data_train to fit our model
+kfcv
+```
+
+#### [Your Turn]{style="color: green;"} ⤵
+
+Above, we split the data into 10 different folds. Change the number of
+folds from 10 to 20 by changing the value of v; 10 is simply the
+default. For help, run `?vfold_cv` to get a hint.
+
+```{r}
+kfcv <- vfold_cv(data_train) # this differentiates this from what we did before
+# before, we simple used data_train to fit our model
+kfcv
+```
+
 ## Step 2: Engineer features
+
+
+## Step 2: Engineer features and write down the recipe
+
+Here, we'll carry out several feature engineering steps.
+
+#### [Your Turn]{style="color: green;"} ⤵
+
+Read about [possible steps](https://www.tmwr.org/recipes.html) and see
+more about how the following five feature engineering steps below work.
+Like in the first learning lab, this is the step in which we set the
+recipe.
+
+-   `step_normalize(all_numeric_predictors())`
+-   `step_nzv(all_predictors())`
+-   `step_novel(all_nominal_predictors())`
+-   `step_dummy(all_nominal_predictors())`
+-   `step_impute_knn(all_predictors(), all_outcomes())`
+
+```{r,}
+recipe(final_grade ~ ., data = data_train) %>% # **edit**: change t final grade
+    update_role(student_id, course_id, section, new_role = "ID variable") %>% # this can be any string; for ID variables
+    step_normalize(all_numeric_predictors()) %>% # standardizes numeric variables
+    step_nzv(all_predictors()) %>% # remove predictors with a "near-zero variance"
+    step_dummy(all_nominal_predictors()) %>%  # dummy code all factor variables
+    step_novel(all_nominal_predictors()) %>% # add a musing label for factors
+    step_impute_knn(all_predictors()) # impute missing data for all predictor variables
+```
+
+## Step 3: Specify the model and workflow
+
+Next, we specify the model and workflow, using the same engine *but a
+different engine and mode*, here, regression for a *continuous outcome*.
+Specifically, we use:
+
+-   using the `linear_reg()` function to set the *model*
+-   using `set_engine("glm")` to set the *engine*
+-   finally, using `set_mode("regression"))`
+
+
+## Step 4: Fit model
+
+Note that here we use the `kfcv` data. We'll run that in the next chunk.
+
+We can ignore the warnings and messages we see.
+
+```{r, warning = FALSE}
+fitted_model_resamples <- fit_resamples(my_wf, resamples = kfcv,
+                              control = control_grid(save_pred = TRUE)) # this allows us to inspect the predictions
+```
+
 
 In Step 0, we noted how we added three variables as potential features.
 Here, we carry out two feature engineering steps we have carried out
